syntax = "proto3";

import "google/protobuf/any.proto";

package bruhcollective.itaysonlab.swedentricks.protos;

option java_multiple_files = true;
option java_package = "bruhcollective.itaysonlab.swedentricks.protos";

message CollectionUpdate {
  repeated CollectionUpdateEntry items = 1;
}

message CollectionUpdateEntry {
  enum Type {
    TRACK = 0;
    ALBUM = 1;
    ARTIST = 4;
  }

  Type type = 1;
  bytes identifier = 2;
  int32 addedAt = 5;
  bool removed = 6;
}